--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "main": "app/main.js",
   "scripts": {
     "start": "electron .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "electron-rebuild"
   },
   "keywords": [
     "electron"
   ],
   "license": "MIT",
   "dependencies": {
-    "electron": "5.0.0",
+    "electron": "4.0.0",
     "electron-prebuilt-compile": "4.0.0",
+    "knex": "^0.16.5",
     "prop-types": "15.6.0",
     "react": "16.2.0",
-    "react-dom": "16.2.0"
+    "react-dom": "16.2.0",
+    "sqlite3": "^4.0.6"
   },
   "devDependencies": {
     "babel-eslint": "8.2.1",
@@ -30,6 +33,7 @@
     "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
+    "electron-rebuild": "^1.8.4",
     "eslint": "4.17.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-plugin-import": "2.8.0",
