--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "electron": "4.0.0",
     "electron-prebuilt-compile": "4.0.0",
+    "idb": "^4.0.3",
     "knex": "^0.16.5",
     "prop-types": "15.6.0",
     "react": "16.2.0",
